--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center" href="#">
+                                <a class="nav-link d-flex align-items-center" asp-controller="User" asp-action="Settings">
                                     <i class="fas fa-cog me-1"></i> Settings
                                 </a>
                             </li>
